Fix Specmatic contract test coverage
